<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.3.4</version>
        <relativePath/> <!-- lookup parent from repository -->
    </parent>
    <groupId>com.JanSahayak</groupId>
    <artifactId>AI</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <name>Jan-Sahayak-AI</name>
    <description>Jan-Sahayak-AI</description>

    <properties>
        <java.version>21</java.version>
        <lombok.version>1.18.30</lombok.version>
    </properties>

    <dependencies>

        <!-- ================================================================ -->
        <!-- SPRING BOOT CORE                                                  -->
        <!-- ================================================================ -->

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-validation</artifactId>
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-data-jpa</artifactId>
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-security</artifactId>
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-websocket</artifactId>
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-devtools</artifactId>
            <scope>runtime</scope>
            <optional>true</optional>
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>

        <!-- ================================================================ -->
        <!-- CACHING — Spring Cache + Caffeine (in-process, no Redis)         -->
        <!--                                                                   -->
        <!-- spring-boot-starter-cache provides the @EnableCaching,           -->
        <!-- @Cacheable, @CacheEvict annotations and the CacheManager SPI.    -->
        <!--                                                                   -->
        <!-- caffeine is the actual cache engine used by CacheConfig.java.    -->
        <!-- Without this dependency CacheConfig will throw:                  -->
        <!--   NoClassDefFoundError: com/github/benmanes/caffeine/cache/...   -->
        <!--                                                                   -->
        <!-- Why Caffeine and not ConcurrentMapCache (the Spring default)?     -->
        <!--   ConcurrentMapCache has NO eviction and NO size cap.             -->
        <!--   At 500k users it will OOM the JVM. Caffeine gives:             -->
        <!--     - maximumSize() — hard heap cap                               -->
        <!--     - expireAfterWrite() — TTL auto-eviction                      -->
        <!--     - recordStats() — hit/miss ratio via Actuator                 -->
        <!-- ================================================================ -->

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-cache</artifactId>
        </dependency>

        <dependency>
            <groupId>com.github.ben-manes.caffeine</groupId>
            <artifactId>caffeine</artifactId>
            <!-- Version managed by spring-boot-starter-parent 3.3.4          -->
            <!-- (resolves to caffeine 3.1.x — compatible with Java 21)       -->
            <!-- Do NOT specify a version here; let Boot manage it to avoid   -->
            <!-- version conflicts with the rest of the BOM.                  -->
        </dependency>

        <!-- ================================================================ -->
        <!-- DATABASE                                                          -->
        <!-- ================================================================ -->

        <dependency>
            <groupId>org.postgresql</groupId>
            <artifactId>postgresql</artifactId>
            <version>42.7.3</version>
        </dependency>

        <!-- ================================================================ -->
        <!-- UTILITIES                                                         -->
        <!-- ================================================================ -->

        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <optional>true</optional>
        </dependency>

        <dependency>
            <groupId>org.modelmapper</groupId>
            <artifactId>modelmapper</artifactId>
            <version>3.2.2</version>
        </dependency>

        <!-- ================================================================ -->
        <!-- JWT AUTHENTICATION                                                -->
        <!-- ================================================================ -->

        <dependency>
            <groupId>io.jsonwebtoken</groupId>
            <artifactId>jjwt-api</artifactId>
            <version>0.12.5</version>
        </dependency>

        <dependency>
            <groupId>io.jsonwebtoken</groupId>
            <artifactId>jjwt-impl</artifactId>
            <version>0.12.5</version>
            <scope>runtime</scope>
        </dependency>

        <dependency>
            <groupId>io.jsonwebtoken</groupId>
            <artifactId>jjwt-jackson</artifactId>
            <version>0.12.5</version>
            <scope>runtime</scope>
        </dependency>


        <dependency>
            <groupId>com.twelvemonkeys.imageio</groupId>
            <artifactId>imageio-jpeg</artifactId>
            <version>3.10.1</version>
        </dependency>

        <!-- WebP image format support -->
        <dependency>
            <groupId>com.twelvemonkeys.imageio</groupId>
            <artifactId>imageio-webp</artifactId>
            <version>3.10.1</version>
        </dependency>

        <!-- File-type detection (used by media validation) -->
        <dependency>
            <groupId>org.apache.tika</groupId>
            <artifactId>tika-core</artifactId>
            <version>2.9.1</version>
        </dependency>

        <!-- ================================================================ -->
        <!-- WEBSOCKET / STOMP                                                 -->
        <!-- ================================================================ -->

        <!-- SockJS client (WebSocket fallback for older browsers) -->
        <dependency>
            <groupId>org.webjars</groupId>
            <artifactId>sockjs-client</artifactId>
            <version>1.5.1</version>
        </dependency>

        <!-- STOMP protocol over WebSocket -->
        <dependency>
            <groupId>org.webjars</groupId>
            <artifactId>stomp-websocket</artifactId>
            <version>2.3.4</version>
        </dependency>

        <!-- Cloudinary SDK (Java) -->
        <dependency>
            <groupId>com.cloudinary</groupId>
            <artifactId>cloudinary-http45</artifactId>
            <version>1.38.0</version>
        </dependency>


    </dependencies>

    <build>
        <plugins>

            <!-- Maven Compiler — Java 21 + Lombok annotation processing -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.11.0</version>
                <configuration>
                    <source>21</source>
                    <target>21</target>
                    <annotationProcessorPaths>
                        <path>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                            <version>${lombok.version}</version>
                        </path>
                    </annotationProcessorPaths>
                </configuration>
            </plugin>

            <!-- Spring Boot Maven Plugin — exclude Lombok from fat jar -->
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <configuration>
                    <excludes>
                        <exclude>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                        </exclude>
                    </excludes>
                </configuration>
            </plugin>

        </plugins>
    </build>

</project>